--- a/index.html
+++ b/index.html
@@ -56,33 +56,32 @@
     <!--  container  -->
     <section class="cf w-100 ph2-ns pv4">
       <article class="fl w-100 w-third-l pv2 ph2 ph3-ns">
-        <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>title title</p>
+        <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>The MoMA Archives and Library is incredible.</p>
       </article>
       <article class="fl w-100 w-two-third-l pv2 ph2 ph3-ns">
-        <h1>Collect Images. Go to the Library.</h1>
 
-        <p>After taking a walk through Thinking Machines, I went back up to the library to visit with Jenny Tobias to follow up with a question I had earlier. I was curious about art that sat at the intersection of vector graphics and photography. </p>
+        <p class="measure">After taking a walk through Thinking Machines, I went back up to the library to visit with Jenny Tobias to follow up with a question I had earlier. I was curious about art that sat at the intersection of vector graphics and photography. </p>
 
-        <p>Hours later, I was neck deep in art I couldn't have possibly imagined, much less Googled… Jenny had pulled literally <em>dozens</em> of works, notably: original(!) Bauhaus magazines, deep Kurt Schwitterz and Andy Warhol cuts, and modern digital art books such as <a href="http://www.stresspress.biz/product/pixel-stress"><em>Stress Press</em></a> by Anouk Kruithof, <a href="https://mishkahenner.com/Dutch-Landscapes"><em>Dutch Landscapes</em></a> by Mishka Henner, and <a href="http://libraryoftheprintedweb.tumblr.com/"><em>Library of the Printed Web</em></a> by Paul Soulellis. </p>
+        <p class="measure">Hours later, I was neck deep in art I couldn't have possibly imagined, much less Googled… Jenny had pulled literally <em>dozens</em> of works, notably: original(!) Bauhaus magazines, deep Kurt Schwitterz and Andy Warhol cuts, and modern digital art books such as <a class="link black bb" href="http://www.stresspress.biz/product/pixel-stress"><em>Stress Press</em></a> by Anouk Kruithof, <a class="link black bb" href="https://mishkahenner.com/Dutch-Landscapes"><em>Dutch Landscapes</em></a> by Mishka Henner, and <a class="link black bb" href="http://libraryoftheprintedweb.tumblr.com/"><em>Library of the Printed Web</em></a> by Paul Soulellis. </p>
 
-        <p>Although I was blown away by the breadth of material, I still didn't feel like I had found quite what I was looking for, and Jenny could tell from my reactions. The works were all just a bit left or right of that graphical-photographical sweet spot I was after. Struggling to find words to refine our search, I resorted to taking out my laptop and pulling up some images from a folder I've been adding to for the last few years. </p>
+        <p class="measure">Although I was blown away by the breadth of material, I still didn't feel like I had found quite what I was looking for, and Jenny could tell from my reactions. The works were all just a bit left or right of that graphical-photographical sweet spot I was after. Struggling to find words to refine our search, I resorted to taking out my laptop and pulling up some images from a folder I've been adding to for the last few years. </p>
 
         <figure>
         <img src="http://res.cloudinary.com/s3ancat/image/upload/v1522654116/Screen_Shot_2018-03-30_at_3.37.55_PM.png" alt="These." />
         <figcaption>These.</figcaption>
         </figure>
 
-        <p>After going through those images, even though she said that what I'm looking for doesn't quite fit a category, Jenny (with the help of a colleague) pointed me to some incredible, inspirational works:</p>
+        <p class="measure">After going through those images, even though she said that what I'm looking for doesn't quite fit a category, Jenny (with the help of a colleague) pointed me to some incredible, inspirational works:</p>
 
         <ul>
-        <li>Irving Penn's <a href="https://www.vogue.com/article/irving-penn-food-photography-vogue-archive">frozen food photography</a></li>
-        <li>Lorenzo Vitturi's <a href="http://www.lorenzovitturi.com/a-dalston-anatomy/"><em>Dalston Anatomy</em></a></li>
-        <li>Michael Najjar's <a href="http://www.michaelnajjar.com/artworks/high-altitude#1"><em>High Altitude</em></a></li>
+        <li>Irving Penn's <a class="link black bb" href="https://www.vogue.com/article/irving-penn-food-photography-vogue-archive">frozen food photography</a></li>
+        <li>Lorenzo Vitturi's <a class="link black bb" href="http://www.lorenzovitturi.com/a-dalston-anatomy/"><em>Dalston Anatomy</em></a></li>
+        <li>Michael Najjar's <a class="link black bb" href="http://www.michaelnajjar.com/artworks/high-altitude#1"><em>High Altitude</em></a></li>
         </ul>
 
-        <p>These three pieces, not only showed me what I was looking for, but also recontextualized my initial question. Sure, <em>visually</em> I was looking for graphical-photographical interaction, but I was actually curious about the <em>philosophical</em> gray area between digital and analog, where art can be surprising and playful, yet deeply compelling. And these works absolutely exemplify that idea. </p>
+        <p class="measure">These three pieces, not only showed me what I was looking for, but also recontextualized my initial question. Sure, <em>visually</em> I was looking for graphical-photographical interaction, but I was actually curious about the <em>philosophical</em> gray area between digital and analog, where art can be surprising and playful, yet deeply compelling. And these works absolutely exemplify that idea. </p>
 
-        <p>Only through conversation with the <strong>extremely</strong> knowledgable and helpful Jenny Tobias and staff at the MoMA Archives and Library could I have figured that out. </p>
+        <p class="measure">Only through conversation with the <strong>extremely</strong> knowledgable and helpful Jenny Tobias and staff at the MoMA Archives and Library could I have figured that out. </p>
       </article>
     </section>
     <footer class="ph2 pv4">      
