--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p class="measure lh-copy">Although I was blown away by the breadth of material, I still didn't feel like I had found quite what I was looking for, and Jenny could tell from my reactions. The works were all just a bit left or right of that graphical-photographical sweet spot I was after. Struggling to find words to refine our search, I resorted to taking out my laptop and pulling up some images from a folder I've been adding to for the last few years. </p>
 
         <figure>
-        <img src="http://res.cloudinary.com/s3ancat/image/upload/v1522654116/Screen_Shot_2018-03-30_at_3.37.55_PM.png" alt="These." />
+        <img class="mw4" src="http://res.cloudinary.com/s3ancat/image/upload/v1522654116/Screen_Shot_2018-03-30_at_3.37.55_PM.png" alt="These." />
         <figcaption>These.</figcaption>
         </figure>
 
