--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/tachyons.css">
+
+    <style>
+    img {
+      max-width: 40%;
+    }
+    </style>
   </head>  
   
   <body class="fw3">
