--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
   </head>  
   
-  <body class="fw3">
+  <body class="sans-serif fw3">
     <header class="ph2-ns pv4 mt0 cf">
       <div class="fl w0 w-third-l pv2 ph2 ph3-ns">
         <div class="pv4-l"></div>
