--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
         </a>
         <a target="_blank" href="http://catangui.com/archive/geh/demo" class="ph0-ns pb3 link db">
-          <p class="f5 mb3 lh-solid black-90">GEH Hitachi Microsite</p>
+          <p class="f5 mb3 lh-solid black-90">GE Hitachi Microsite</p>
         </a>
       </article>
       
