--- a/design/music-map/index.html
+++ b/design/music-map/index.html
@@ -3,10 +3,10 @@
 <title>Sean Catangui</title>
 <meta charset="UTF-8">
 <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
-<link rel="stylesheet" type="text/css" href="../tachyons.css">
-<link rel="stylesheet" type="text/css" href="../master.css">
+<link rel="stylesheet" type="text/css" href="../../css/tachyons.css">
+<link rel="stylesheet" type="text/css" href="./master.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="../master.js"></script>
+<script src="./master.js"></script>
 
 <body class="black-90">
 
@@ -40,45 +40,45 @@
   <h1 class="f2 pl3 pl5-ns lh-title fw5 mb1">Mockups</h1>
   <main class="cf pa3 pa5-ns">
     <div class="fl w-100 w-third-ns ph4-l mh0 mb2 pb3 tc">
-      <img class="s" src="../images/m-login.jpg">
+      <img class="s" src="./images/m-login.jpg">
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>Sign in</b> with Spotify to access your listener taste profile.</p>
     </div>
     <div class="fl w-100 w-third-ns ph4-l mh0 mb2 pb3 tc">
-      <img class="s" src="../images/m-genre.jpg">
+      <img class="s" src="./images/m-genre.jpg">
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>View </b> your Map. Genre Bubbles are scaled to reflect your listening habits.</p>
     </div>
     <div class="fl w-100 w-third-ns ph4-l mh0 mb2 pb3 tc">
-      <img class="s" src="../images/m-genre-playing.jpg">
+      <img class="s" src="./images/m-genre-playing.jpg">
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>Tap </b> a Genre Bubble to start a playlist of that genre algorithmically tailored to your taste profile.</p>
     </div>
   </main>
   <main class="cf pa3 pa5-ns">
     <div class="fl w-100 w-third-ns ph4-l mh0 mb2 pb3 tc">
       <!-- <h2 class="f2 lh-solid">Headline</h2> -->
-      <img class="s" src="../images/m-genre-ph.jpg">
+      <img class="s" src="./images/m-genre-ph.jpg">
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>Press and hold</b> a Genre Bubble to access options of viewing its artists, its subgenres, or selecting multiple genres at once.</p>
     </div>
     <div class="fl w-100 w-third-ns ph4-l mh0 mb2 pb3 tc">
-      <img class="s" src="../images/m-subgenre.jpg">
+      <img class="s" src="./images/m-subgenre.jpg">
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>Explore</b> ultra-specific subgenres you haven't heard of.</p>
     </div>
     <div class="fl w-100 w-third-ns ph4-l mh0 mb2 pb3 tc">
-      <img class="s" src="../images/m-artist.jpg">
+      <img class="s" src="./images/m-artist.jpg">
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>Discover </b>new, unknown artists. From here, view their Spotify artist page.</p>
     </div>
   </main>  
   <main class="cf pa3 pa5-ns">
     <div class="fl w-100 w-third-ns ph4-l mh0 mb2 pb3 tc">
       <!-- <h2 class="f2 lh-solid">Headline</h2> -->
-      <img class="s" src="../images/m-search.jpg">
+      <img class="s" src="./images/m-search.jpg">
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>Find</b> songs, artists, albums, subgenres, or friends.</p>
     </div>
     <div class="fl w-100 w-third-ns ph4-l mh0 mb2 pb3 tc">
-      <img class="s" src="../images/m-filters.jpg">
+      <img class="s" src="./images/m-filters.jpg">
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>Organize</b> your Map by intensity, popularity, included genres, time, and place.</p>
     </div>
     <div class="fl w-100 w-third-ns ph4-l mh0 mb2 pb3 tc">
-      <img class="s" src="../images/Asset 3-20.jpg">
+      <img class="s" src="./images/Asset 3-20.jpg">
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>Connect</b> with your favorite artists' music tastes, or explore the music of different subcultures.</p>
     </div>
   </main>
@@ -88,42 +88,42 @@
   <h1 class="f2 pt3 pt5-ns pl3 pl5-ns lh-title tracked-tight fw5 mb1">Wireframes</h1>
   <main class="cf pt3 pt5-ns ph3 ph5-ns">
     <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
-      <img class="wireframe shadow-3" src="../images/1.0-wf-home.jpg">
+      <img class="wireframe shadow-3" src="./images/1.0-wf-home.jpg">
     </div>
     <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
-      <img class="wireframe shadow-3" src="../images/1.1-wf-tool-search.jpg">
-    </div>
-  </main>
-  <main class="cf ph3 ph5-ns">
-    <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
-      <img class="wireframe shadow-3" src="../images/1.2-wf-tool-filters.jpg">
-    </div>
-    <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
-      <img class="wireframe shadow-3" src="../images/1.3-wf-tool-social.jpg">
+      <img class="wireframe shadow-3" src="./images/1.1-wf-tool-search.jpg">
     </div>
   </main>
   <main class="cf ph3 ph5-ns">
     <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
-      <img class="wireframe shadow-3" src="../images/2-wf-home-p.jpg">
+      <img class="wireframe shadow-3" src="./images/1.2-wf-tool-filters.jpg">
     </div>
     <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
-      <img class="wireframe shadow-3" src="../images/3-wf-home-ph.jpg">
+      <img class="wireframe shadow-3" src="./images/1.3-wf-tool-social.jpg">
     </div>
   </main>
   <main class="cf ph3 ph5-ns">
     <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
-      <img class="wireframe shadow-3" src="../images/4-wf-home-ph2.jpg">
+      <img class="wireframe shadow-3" src="./images/2-wf-home-p.jpg">
     </div>
     <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
-      <img class="wireframe shadow-3" src="../images/5-wf-subgenres.jpg">
+      <img class="wireframe shadow-3" src="./images/3-wf-home-ph.jpg">
+    </div>
+  </main>
+  <main class="cf ph3 ph5-ns">
+    <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
+      <img class="wireframe shadow-3" src="./images/4-wf-home-ph2.jpg">
+    </div>
+    <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
+      <img class="wireframe shadow-3" src="./images/5-wf-subgenres.jpg">
     </div>
   </main>
   <main class="cf pb3 pb5-ns ph3 ph5-ns">
     <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
-      <img class="wireframe shadow-3" src="../images/6-wf-subgenres-ph.jpg">
+      <img class="wireframe shadow-3" src="./images/6-wf-subgenres-ph.jpg">
     </div>
     <div class="fl w-100 w-50-ns mh0 mb2 pa3 pa4-ns tc"> 
-      <img class="wireframe shadow-3" src="../images/7-wf-artists.jpg">
+      <img class="wireframe shadow-3" src="./images/7-wf-artists.jpg">
     </div>
   </main>
 
@@ -148,9 +148,9 @@
       <li class="lh-copy pv1"><a target="_new" class="link b underline-hover black-50" href="https://www.youtube.com/watch?v=2u6HTG8LuXQ">Nintendo - Putting Play First | Game Maker's Toolkit</a></li>
     </ul>
     <h2 class="f3">Surveys / Feedback</h2>
-    <img class="mb3" src="../images/m-feedback.jpg">
+    <img class="mb3" src="./images/m-feedback.jpg">
     <h2 class="f3">Sketches</h2>
-    <img class="mb3" src="../images/m-sketches.jpg">
+    <img class="mb3" src="./images/m-sketches.jpg">
   </div>
 
   <div class="ph5"><hr></div>
