--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
       </article>
       
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
-        <a target="_blank" href="http://catangui.com/archive/geh/demo">
+        <a target="_blank" href="http://catangui.com/geh/">
           <div class="aspect-ratio aspect-ratio--6x4">
             <img style="background-image:url(images/geh-landing.jpg);" 
             class="db bg-center cover aspect-ratio--object" />
           </div>
         </a>
-        <a target="_blank" href="http://catangui.com/archive/geh/demo" class="ph0-ns pb3 link db">
+        <a target="_blank" href="http://catangui.com/geh/" class="ph0-ns pb3 link db">
           <p class="f5 mb3 lh-solid black-90">GE Hitachi Microsite</p>
         </a>
       </article>
@@ -138,13 +138,13 @@
       </article>
       
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
-        <a target="_blank" href="http://catangui.com/archive/music-map">
+        <a target="_blank" href="./design/music-map">
           <div class="aspect-ratio aspect-ratio--6x4">
             <img style="background-image:url(images/music-map.png);" 
             class="db bg-center cover aspect-ratio--object" />
           </div>
         </a>
-        <a target="_blank" href="http://catangui.com/archive/music-map" class="ph0-ns pb3 link db">
+        <a target="_blank" href="./design/music-map" class="ph0-ns pb3 link db">
           <p class="f5 mb3 lh-solid black-90">Music Map</p>
         </a>
       </article>
