touching up footer

--- a/design/music-map/index.html
+++ b/design/music-map/index.html
@@ -12,9 +12,9 @@
 
 <header id="banner" class="bg-white w-100 ph3 pv3 ph4-ns bb b--black-20">
   <nav>
-    <a class="link black-90 dib" href="../">
-    <p class="f3 tracked-tight pa0 mt0 mb0" title="Home">Sean Catangui</p>
-    <p class="f6-ns mt0 mb0">Product and Experience Design</p>
+    <a class="link black-90 dib" href="../../">
+      <p class="f3 tracked-tight pa0 mt0 mb0" title="Home">Sean Catangui</p>
+      <p class="f6-ns mt0 mb0">Product and Experience Design</p>
     </a>
   </nav>
 </header>
@@ -153,9 +153,8 @@
     <img class="mb3" src="./images/m-sketches.jpg">
   </div>
 
-  <div class="ph5"><hr></div>
-
-  <main class="cf pa3 pa5-ns">
+  <!-- <div class="ph5"><hr></div> -->
+  <!-- <main class="cf pa3 pa5-ns">
     <h1 class="f1  lh-title tracked-tight fw5 mb1">Other Projects</h1>
     <div class="fl w-100 w-50-ns mh0 mb2 ph3-ns pb3">
        <a href="../geh" class="pv2 db no-underline black-90">
@@ -183,7 +182,7 @@
        <p class="lh-copy f4">An ongoing exploration of algorithmic art.</p>
       </a>
     </div>
-  </main>
+  </main> -->
 </section>
 <div class="ph5"><hr></div>
 <section class="pa3 pa5-ns">
