--- a/design/music-map/index.html
+++ b/design/music-map/index.html
@@ -78,7 +78,7 @@
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>Organize</b> your Map by intensity, popularity, included genres, time, and place.</p>
     </div>
     <div class="fl w-100 w-third-ns ph4-l mh0 mb2 pb3 tc">
-      <img class="s" src="./images/Asset 3-20.jpg">
+      <img class="s" src="./images/m-social.jpg">
       <p class="lh-copy measure-narrow f5 tl ph3 center"><b>Connect</b> with your favorite artists' music tastes, or explore the music of different subcultures.</p>
     </div>
   </main>
@@ -190,7 +190,7 @@
       <div class="fl w-100 w-50-l pa2 pl4-l">
         <h1 class="f1 lh-title tracked-tight fw5 mb1">Contact</h1>
           <p class="measure lh-copy">
-        Thanks for checking out my recent work. I'm currently based in the D.C. area. If you want to meet up and talk design projects, feel free to <a class="link b underline-hover black-90" href="mailto:seancaat@gmail.com">reach out</a>! 
+        Thanks for checking out my recent work. I'm currently based in Brooklyn. If you want to meet up and talk design projects, feel free to <a class="link b underline-hover black-90" href="mailto:seancaat@gmail.com">reach out</a>! 
       </p>
       <p class="measure lh-copy">
         <a href="mailto:seancaat@gmail.com" class="link b black-90 f4 f3-ns underline-hover">seancaat@gmail.com</a>
