trying jquery fix again

--- a/sketches/14-poster.html
+++ b/sketches/14-poster.html
@@ -19,7 +19,7 @@
     }
     
     #rl {
-      background-image: url("_images/splosion.jpg");
+      background-image: url("images/splosion.jpg");
       background-repeat: none;
       background-size: cover;
     }
