--- a/sketches/15-cooper.html
+++ b/sketches/15-cooper.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="../js/two.min.js"></script>
 <script type="text/javascript" src="../js/Tween.js"></script>
 <script type="text/javascript" src="../js/RequestAnimationFrame.js"></script>  
-<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   
   <style>
     
