--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="fl w-two-thirds-m w-third-l ph2 ph3-ns pv0 mt0">  
         <p class="measure-wide lh-copy fw3">
-          I'm an artist who works primarily with graphic design and computer programming. The goal of my practice is to explore the boundaries of digital and generative art. All work shown is made with JavaScript.
+          I'm an artist who works primarily with graphic design and computer programming. The goal of my practice is to explore the boundaries of digital art and design. 
         </p>
         <p class="measure-wide lh-copy fw3">
           Based in Brooklyn.
