--- a/sketches/5-square-pulsator.html
+++ b/sketches/5-square-pulsator.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="../js/two.min.js"></script>
 <script type="text/javascript" src="../js/Tween.js"></script>
 <script type="text/javascript" src="../js/RequestAnimationFrame.js"></script>  
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdn.rawgit.com/seancaat/randomized-form/master/jquery.min.js'></script>
   
   <style>
     iframe {
