fixing bad cdn jquery links

--- a/sketches/2-wiper.html
+++ b/sketches/2-wiper.html
@@ -11,12 +11,12 @@
 <script type="text/javascript" src="../js/Tween.js"></script>
 <script type="text/javascript" src="../js/RequestAnimationFrame.js"></script>  
 <script src='https://cdn.rawgit.com/seancaat/randomized-form/master/jquery.min.js'></script>
-    
-  
   
 <body>
 
-  <section id="rl" class="w-100 vh-100"></section>
+  <section id="rl" class="w-100 vh-100">
+    <p style="position: fixed; bottom:0%; width: 100%; font-weight: 300; text-align: center; ">click or tap</p>
+  </section>
   
   <script>
       var colors = [
