--- a/sketches/13-gah.html
+++ b/sketches/13-gah.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="../two.min.js"></script>
 <script type="text/javascript" src="../Tween.js"></script>
 <script type="text/javascript" src="../RequestAnimationFrame.js"></script>  
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdn.rawgit.com/seancaat/randomized-form/master/jquery.min.js'></script>
   
   <style>
     iframe {
