--- a/sketches/14.1-test.html
+++ b/sketches/14.1-test.html
@@ -11,7 +11,8 @@
 <script type="text/javascript" src="../underscore-min.js"></script>
 <script type="text/javascript" src="../Tween.js"></script>
 <script type="text/javascript" src="../RequestAnimationFrame.js"></script>  
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdn.rawgit.com/seancaat/randomized-form/master/jquery.min.js'></script>
+
   
   <style>
     
