--- a/sketches/3-dot-scatter.html
+++ b/sketches/3-dot-scatter.html
@@ -10,7 +10,8 @@
 <script type="text/javascript" src="../js/two.min.js"></script>
 <script type="text/javascript" src="../js/Tween.js"></script>
 <script type="text/javascript" src="../js/RequestAnimationFrame.js"></script>  
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src='https://cdn.rawgit.com/seancaat/randomized-form/master/jquery.min.js'></script>
+
   
   <style>
 /*
