two new piecezzzz

--- a/index.html
+++ b/index.html
@@ -62,6 +62,35 @@
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
+            <a target="_blank" href="https://glitch.com/@seancaat" class="bb link black">Glitch</a> Projects
+          </p>
+        </div>
+      </article>
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+        <a target="_blank" href="https://wavywavy.glitch.me">
+          <div class="aspect-ratio aspect-ratio--6x4">
+            <img style="background-image:url(images/wave1.gif);" 
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <a target="_blank" href="https://wavywavy.glitch.me" class="ph0-ns pb3 link db">
+          <p class="f5 mb3 lh-solid black-90">Interactive Typography</p>
+        </a>
+      </article>
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+        <a target="_blank" href="https://brainf--k-visualizer.glitch.me/">
+          <div class="aspect-ratio aspect-ratio--6x4">
+            <img style="background-image:url(images/bf.gif); background-position: 0% 0%" 
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <a target="_blank" href="https://brainf--k-visualizer.glitch.me/" class="ph0-ns pb3 link db">
+          <p class="f5 mb3 lh-solid black-90">Brainf*ck Visual Debugger</p>
+        </a>
+      </article>
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+        <div class="aspect-ratio aspect-ratio--6x4 mb5">
+          <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
             <a target="_blank" href="http://reallyfrom.com" class="bb link black">Really From</a>, an interactive audiovisual album on cultural identity.
           </p>
         </div>
