--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
 
-  <body class="fw3 mw9">
+  <body class="fw3 mw9 w-90">
     <header class="ph4-l pv3-m pv4-ns pv0 mt0 cf">
       <div class="fl w0 w-third-l pv2 ph2 ph3-ns">
         <div class="pv4-l"></div>
