--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
           <p class="f5 mb3 lh-solid black-90">Music Map</p>
         </a>
       </article>
-
+      
+      <!-- SKETCHES -->
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
