--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
 
-  <body class="fw3 mw9 w-90">
+  <body class="fw3 w-90 center" style="max-width: 1200px;">
     <header class="ph4-l pv3-m pv4-ns pv0 mt0 cf">
       <div class="fl w0 w-third-l pv2 ph2 ph3-ns">
         <div class="pv4-l"></div>
@@ -196,7 +196,7 @@
           <p class="f5 mb3 lh-solid black-90">Music Map</p>
         </a>
       </article>
-      
+
       <!-- SKETCHES -->
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
