adding the gendered project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
 
-  <body class="fw3 w-90 center" style="max-width: 1200px;">
+  <body class="fw3 w-90-ns center" style="max-width: 1200px;">
     <header class="ph4-l pv3-m pv4-ns pv0 mt0 cf">
       <div class="fl w0 w-third-l pv2 ph2 ph3-ns">
         <div class="pv4-l"></div>
@@ -57,6 +57,24 @@
     <!--  container  -->
     <!-- GLITCH PROJECTS -->
     <section class="cf w-100 ph4-l pv3-m pv4">
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+        <div class="aspect-ratio aspect-ratio--6x4 mb5">
+          <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
+            <a target="_blank" href="https://gendered.netlify.com" class="bb link black">The Gendered Project</a>: creative direction and front-end development.
+          </p>
+        </div>
+      </article>
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+        <a target="_blank" href="https://gendered.netlify.com">
+          <div class="aspect-ratio aspect-ratio--6x4">
+            <img style="background-image:url(images/gendered-logo.png);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <a target="_blank" href="https://gendered.netlify.com" class="ph0-ns pb3 link db">
+          <p class="f5 mb3 lh-solid black-90">The Gendered Project</p>
+        </a>
+      </article>
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
@@ -101,7 +119,7 @@
       <!-- REALLY FROM -->
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
-          <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
+          <p class='pv0 mv0 lh-title f3-ns fw3 ttu i'>
             <a target="_blank" href="http://reallyfrom.com" class="bb link black">Really From</a>, an interactive audiovisual album on cultural identity.
           </p>
         </div>
