adding dropmark stuff

--- a/index.html
+++ b/index.html
@@ -55,23 +55,49 @@
     </header>
 
     <!--  container  -->
-    <!-- GLITCH PROJECTS -->
     <section class="cf w-100 ph4-l pv3-m pv4">
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
-            <a target="_blank" href="https://gendered.netlify.com" class="bb link black">The Gendered Project</a>: creative direction and front-end development.
+            <a target="_blank" href="https://dropmark.com" class="bb link black">Dropmark</a> Rebrand: interaction design, motion design, front-end dev.
           </p>
         </div>
       </article>
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
-        <a target="_blank" href="https://gendered.netlify.com">
+        <a target="_blank" href="https://dropmark.com">
+          <div class="aspect-ratio aspect-ratio--6x4">
+            <video width="100%" muted="muted" autoplay="autoplay" loop="loop" src="images/dropmark-illo.mp4"></video>
+          </div>
+        </a>
+        <a target="_blank" href="https://dropmark.com" class="ph0-ns pb3 link db">
+          <p class="f5 mb3 lh-solid black-90">Motion design</p>
+        </a>
+      </article>
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+        <a target="_blank" href="https://dropmark.com">
+          <div class="aspect-ratio aspect-ratio--6x4">
+            <div class="aspect-ratio--object contain" style="background:url(images/dropmark-logo.gif); background-repeat: no-repeat"></div>
+          </div>
+        </a>
+        <a target="_blank" href="https://dropmark.com" class="ph0-ns pb3 link db">
+          <p class="f5 mb3 lh-solid black-90">Interactive logo treaments</p>
+        </a>
+      </article>
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+        <div class="aspect-ratio aspect-ratio--6x4 mb5">
+          <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
+            <a target="_blank" href="https://genderedproject.org" class="bb link black">The Gendered Project</a>: creative direction and front-end dev.
+          </p>
+        </div>
+      </article>
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+        <a target="_blank" href="https://genderedproject.org">
           <div class="aspect-ratio aspect-ratio--6x4">
             <img style="background-image:url(images/gendered-logo.png);"
             class="db bg-center cover aspect-ratio--object" />
           </div>
         </a>
-        <a target="_blank" href="https://gendered.netlify.com" class="ph0-ns pb3 link db">
+        <a target="_blank" href="https://genderedproject.org" class="ph0-ns pb3 link db">
           <p class="f5 mb3 lh-solid black-90">The Gendered Project</p>
         </a>
       </article>
