word changes, header change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="pv4-l"></div>
       </div>
       <div class="fl w-100 w-two-thirds-l ph2 ph3-ns">
-        <h1 class="f2 f1-l fw6 i ttu tracked-tight">Sean Catangui</h1>
+        <h1 class="f2 fw6 i ttu tracked-tight">Sean Catangui</h1>
       </div>
 
       <div class="fl w0 w-third-l">
@@ -37,7 +37,7 @@
       </div>
       <div class="fl w-two-thirds-m w-third-l ph2 ph3-ns pv0 mt0">
         <p class="measure-wide lh-copy fw3">
-          I'm an artist who works primarily with graphic design and computer programming. The goal of my practice is to explore the boundaries of digital art and design.
+          I'm an artist who works mostly with graphic design and computer programming. The goal of my practice is to explore the boundaries of digital art and design.
         </p>
         <p class="measure-wide lh-copy fw3">
           Based in Brooklyn.
@@ -48,7 +48,7 @@
           Twitter: <a target="_blank" href="https://twitter.com/_catangui?lang=en" class="black link fw6 i">@_catangui</a><br>
           Instagram: <a target="_blank" href="https://www.instagram.com/s3ancat/" class="black link fw6 i">@s3ancat</a><br>
           Apple Music: <a target="_blank" href="https://itunes.apple.com/profile/s3ancat" class="black link fw6 i">@s3ancat</a><br>
-          Goodreads: <a target="_blank" href="https://www.goodreads.com/user/show/73620105-s3ancat" class="black link fw6 i">s3ancat</a><br>
+          <!-- Goodreads: <a target="_blank" href="https://www.goodreads.com/user/show/73620105-s3ancat" class="black link fw6 i">s3ancat</a><br> -->
           GitHub: <a target="_blank" href="https://github.com/seancaat" class="black link fw6 i">seancaat</a><br>
         </p>
       </div>
@@ -59,7 +59,7 @@
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
-            <a target="_blank" href="https://dropmark.com" class="bb link black">Dropmark</a> Rebrand: interaction design, motion design, front-end dev.
+            <a target="_blank" href="https://dropmark.com" class="bb link black">Dropmark</a> Rebrand: interaction design, animation, front-end development.
           </p>
         </div>
       </article>
@@ -70,7 +70,7 @@
           </div>
         </a>
         <a target="_blank" href="https://dropmark.com" class="ph0-ns pb3 link db">
-          <p class="f5 mb3 lh-solid black-90">Motion design</p>
+          <p class="f5 mb3 lh-solid black-90">Landing page animation</p>
         </a>
       </article>
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
@@ -86,7 +86,7 @@
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
-            <a target="_blank" href="https://genderedproject.org" class="bb link black">The Gendered Project</a>: creative direction and front-end dev.
+            <a target="_blank" href="https://genderedproject.org" class="bb link black">The Gendered Project</a>: identity, UX/UI, and front-end development.
           </p>
         </div>
       </article>
