--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
           Twitter: <a target="_blank" href="https://twitter.com/_catangui?lang=en" class="black link fw6 i">@_catangui</a><br>
           Instagram: <a target="_blank" href="https://www.instagram.com/s3ancat/" class="black link fw6 i">@s3ancat</a><br>
           Apple Music: <a target="_blank" href="https://itunes.apple.com/profile/s3ancat" class="black link fw6 i">@s3ancat</a><br>
-          <!-- Goodreads: <a target="_blank" href="https://www.goodreads.com/user/show/73620105-s3ancat" class="black link fw6 i">s3ancat</a><br> -->
           GitHub: <a target="_blank" href="https://github.com/seancaat" class="black link fw6 i">seancaat</a><br>
         </p>
+        <p class="measure lh-copy fw3">
+          Email: <a target="_blank" href="mailto:seancaat@gmail.com" class="black link fw6 i">seancaat@gmail.com</a><br>
+        </p>
+
       </div>
     </header>
 
@@ -59,7 +62,7 @@
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
-            <a target="_blank" href="https://dropmark.com" class="bb link black">Dropmark</a> Rebrand: interaction design, animation, front-end development.
+            <a target="_blank" href="https://dropmark.com" class="bb link black">Dropmark</a>: interaction design, animation, front-end dev.
           </p>
         </div>
       </article>
@@ -86,7 +89,7 @@
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
-            <a target="_blank" href="https://genderedproject.org" class="bb link black">The Gendered Project</a>: identity, UX/UI, and front-end development.
+            <a target="_blank" href="https://genderedproject.org" class="bb link black">The Gendered Project</a>: identity, UX/UI, and front-end dev.
           </p>
         </div>
       </article>
