changing insta link and handle and page title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>
-      Sean Catangui
+      @_catangui
     </title>
     <meta name="author" content="Sean Catangui">
     <meta name="description" content="">
@@ -46,8 +46,8 @@
       <div class="fl w-third-l ph2 ph3-ns">
         <p class="measure lh-copy fw3">
           Twitter: <a target="_blank" href="https://twitter.com/_catangui?lang=en" class="black link fw6 i">@_catangui</a><br>
-          Instagram: <a target="_blank" href="https://www.instagram.com/s3ancat/" class="black link fw6 i">@s3ancat</a><br>
-          Apple Music: <a target="_blank" href="https://itunes.apple.com/profile/s3ancat" class="black link fw6 i">@s3ancat</a><br>
+          Instagram: <a target="_blank" href="https://www.instagram.com/_catangui/" class="black link fw6 i">@_catangui</a><br>
+          Apple Music: <a target="_blsank" href="https://itunes.apple.com/profile/s3ancat" class="black link fw6 i">@s3ancat</a><br>
           GitHub: <a target="_blank" href="https://github.com/seancaat" class="black link fw6 i">seancaat</a><br>
         </p>
         <p class="measure lh-copy fw3">
