--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           I'm an artist who works mostly with graphic design and computer programming. The goal of my practice is to explore the boundaries of digital art and design.
         </p>
         <p class="measure-wide lh-copy fw3">
-          Based in Brooklyn.
+          Brooklyn, NY
         </p>
       </div>
       <div class="fl w-third-l ph2 ph3-ns">
@@ -58,7 +58,38 @@
     </header>
 
     <!--  container  -->
+
+    
     <section class="cf w-100 ph4-l pv3-m pv4">
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+        <div class="aspect-ratio aspect-ratio--6x4 mb5">
+          <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
+            <a target="_blank" href="https://www.are.na/sean-catangui/generative-drawing" class="bb link black">Generative Drawing</a>: hacking my own custom drawing tools.
+          </p>
+        </div>
+      </article>
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+        <a target="_blank" href="https://www.are.na/block/4958214">
+          <div class="aspect-ratio aspect-ratio--6x4">
+              <div class="aspect-ratio--object cover" style="background:url(images/scribbledots.jpg); background-repeat: no-repeat"></div>
+            </div>
+        </a>
+        <a target="_blank" href="https://www.are.na/block/4958214" class="ph0-ns pb3 link db">
+          <p class="f5 mb3 lh-solid black-90">Composition 9/04</p>
+        </a>
+      </article>
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+          <a target="_blank" href="https://www.are.na/block/4912612">
+            <div class="aspect-ratio aspect-ratio--6x4">
+                <div class="aspect-ratio--object cover" style="background:url(images/phyllo.jpg); background-repeat: no-repeat"></div>
+              </div>
+          </a>
+          <a target="_blank" href="https://www.are.na/block/4912612" class="ph0-ns pb3 link db">
+            <p class="f5 mb3 lh-solid black-90">Composition 8/28</p>
+          </a>
+        </article>
+
+
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
