moving stuff around

--- a/index.html
+++ b/index.html
@@ -90,33 +90,7 @@
         </article>
 
 
-      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
-        <div class="aspect-ratio aspect-ratio--6x4 mb5">
-          <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
-            <a target="_blank" href="https://dropmark.com" class="bb link black">Dropmark</a>: interaction design, animation, front-end dev.
-          </p>
-        </div>
-      </article>
-      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
-        <a target="_blank" href="https://dropmark.com">
-          <div class="aspect-ratio aspect-ratio--6x4">
-            <video width="100%" muted="muted" autoplay="autoplay" loop="loop" src="images/dropmark-illo.mp4"></video>
-          </div>
-        </a>
-        <a target="_blank" href="https://dropmark.com" class="ph0-ns pb3 link db">
-          <p class="f5 mb3 lh-solid black-90">Landing page animation</p>
-        </a>
-      </article>
-      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
-        <a target="_blank" href="https://dropmark.com">
-          <div class="aspect-ratio aspect-ratio--6x4">
-            <div class="aspect-ratio--object contain" style="background:url(images/dropmark-logo.gif); background-repeat: no-repeat"></div>
-          </div>
-        </a>
-        <a target="_blank" href="https://dropmark.com" class="ph0-ns pb3 link db">
-          <p class="f5 mb3 lh-solid black-90">Interactive logo treaments</p>
-        </a>
-      </article>
+      
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
@@ -180,45 +154,73 @@
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-title f3-ns fw3 ttu i'>
-            <a target="_blank" href="http://reallyfrom.com" class="bb link black">Really From</a>, an interactive audiovisual album on cultural identity.
+            <a target="_blank" href="http://catangui.com/really-from-web" class="bb link black">Really From</a>, an interactive audiovisual album on cultural identity.
           </p>
         </div>
       </article>
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
-        <a target="_blank" href="https://reallyfrom.com/1-solitude.html">
+        <a target="_blank" href="http://catangui.com/really-from-web/1-solitude.html">
           <div class="aspect-ratio aspect-ratio--6x4">
             <img style="background-image:url(images/solitude.gif);"
             class="db bg-center cover aspect-ratio--object" />
           </div>
         </a>
-        <a target="_blank" href="https://reallyfrom.com/1-solitude.html" class="ph0-ns pb3 link db">
+        <a target="_blank" href="http://catangui.com/really-from-web/1-solitude.html" class="ph0-ns pb3 link db">
           <p class="f5 mb3 lh-solid black-90">SOLITUDE</p>
         </a>
       </article>
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
-        <a target="_blank" href="https://reallyfrom.com/3-another-mind.html">
+        <a target="_blank" href="http://catangui.com/really-from-web/3-another-mind.html">
           <div class="aspect-ratio aspect-ratio--6x4">
             <img style="background-image:url(images/mind.gif);"
             class="db bg-center cover aspect-ratio--object" />
           </div>
         </a>
-        <a target="_blank" href="https://reallyfrom.com/4-lucid.html" class="ph0-ns pb3 link db">
+        <a target="_blank" href="http://catangui.com/really-from-web/3-another-mind.html" class="ph0-ns pb3 link db">
           <p class="f5 mb3 lh-solid black-90">ANOTHER'S MIND</p>
         </a>
       </article>
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
-        <a target="_blank" href="https://reallyfrom.com/4-lucid.html">
+        <a target="_blank" href="http://catangui.com/really-from-web/4-lucid.html">
           <div class="aspect-ratio aspect-ratio--6x4">
             <img style="background-image:url(images/lucid.gif);"
             class="db bg-center cover aspect-ratio--object" />
           </div>
         </a>
-        <a target="_blank" href="https://reallyfrom.com/4-lucid.html" class="ph0-ns pb3 link db">
+        <a target="_blank" href="http://catangui.com/really-from-web/4-lucid.html" class="ph0-ns pb3 link db">
           <p class="f5 mb3 lh-solid black-90">LUCID AMBIGUITY</p>
         </a>
       </article>
       <!-- =========== -->
       <!-- COMMERCIAL WORK -->
+      <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+          <div class="aspect-ratio aspect-ratio--6x4 mb5">
+            <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
+              <a target="_blank" href="https://dropmark.com" class="bb link black">Dropmark</a>: interaction design, animation, front-end dev.
+            </p>
+          </div>
+        </article>
+        <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+          <a target="_blank" href="https://dropmark.com">
+            <div class="aspect-ratio aspect-ratio--6x4">
+              <video width="100%" muted="muted" autoplay="autoplay" loop="loop" src="images/dropmark-illo.mp4"></video>
+            </div>
+          </a>
+          <a target="_blank" href="https://dropmark.com" class="ph0-ns pb3 link db">
+            <p class="f5 mb3 lh-solid black-90">Landing page animation</p>
+          </a>
+        </article>
+        <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
+          <a target="_blank" href="https://dropmark.com">
+            <div class="aspect-ratio aspect-ratio--6x4">
+              <div class="aspect-ratio--object contain" style="background:url(images/dropmark-logo.gif); background-repeat: no-repeat"></div>
+            </div>
+          </a>
+          <a target="_blank" href="https://dropmark.com" class="ph0-ns pb3 link db">
+            <p class="f5 mb3 lh-solid black-90">Interactive logo treaments</p>
+          </a>
+        </article>
+
       <article class="fl w-50 w-third-l pv2 ph2 ph3-ns">
         <div class="aspect-ratio aspect-ratio--6x4 mb5">
           <p class='pv0 mv0 lh-copy f3-ns fw3 ttu i'>
