--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="fl w-two-thirds-m w-third-l ph2 ph3-ns pv0 mt0">
         <p class="measure-wide lh-copy fw3">
-          I'm an artist who works mostly with graphic design and computer programming. The goal of my practice is to explore the boundaries of digital art and design.
+          I'm an artist who works mostly with graphic design and computer programming. My goal is to explore cultural systems through code and to help others do the same.
         </p>
         <p class="measure-wide lh-copy fw3">
           Brooklyn, NY
