fixing font weights

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="/normalize.css">
     <link rel="stylesheet" href="/style.css">
     
     <!-- import the webpage's javascript file -->
@@ -15,9 +16,9 @@
   </head>  
   
   <body>
-    <h1 class="noselect">
+    <p class="noselect">
       Sean Catangui designs and builds websites.
-    </h1>  
+    </p>  
     <canvas id="myCanvas" resize></canvas>
     <footer class="noselect">
       <ul>
