--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>🌱 @_catangui | Sean Catangui</title>
+    <title>@_catangui | Sean Catangui</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
+    <!-- favicon -->
+    <link rel="icon" 
+      type="image/png" 
+      href="/seedling.png">
+
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/normalize.css">
     <link rel="stylesheet" href="/style.css">
