google analytics and bottom nav mobile spacing

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116773957-1"></script>
+    <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-116773957-1');</script>
+
     <title>@_catangui | Sean Catangui</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- favicon -->
-    <link rel="icon" 
-      type="image/png" 
-      href="/seedling.png">
+    <link rel="icon" type="image/png" href="/seedling.png">
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/normalize.css">
@@ -21,9 +23,9 @@
   </head>  
   
   <body>
-    <p class="noselect">
+    <h1 class="noselect">
       Sean Catangui designs and builds websites.
-    </p>  
+    </h1>  
     <canvas id="myCanvas" resize></canvas>
     <footer class="noselect">
       <ul>
@@ -36,9 +38,7 @@
         <li>
           <a href="https://github.com/seancaat" target="_blank">GitHub</a>
         </li>
-        <!-- or Next tool, or Email -->
         <a class="button" href="mailto:seancaat@gmail.com">Email</a>
-
       </ul>
     </footer>
     
