--- a/index.html
+++ b/index.html
@@ -24,23 +24,8 @@
   
   <body>
     <h1 class="noselect">
-      Sean Catangui designs and builds websites.
+      There is no love of life without despair of life.
     </h1>  
     <canvas id="myCanvas" resize></canvas>
-    <footer class="noselect">
-      <ul>
-        <li>
-          <a href="https://www.notion.so/seancaat/07a5a0e6119c41f59154058a4760e0e1?v=65207c70dc4147929bf48e09ac80657f" target="_blank">Portfolio</a>
-        </li>
-        <li>
-          <a href="https://twitter.com/_catangui" target="_blank">Twitter</a>
-        </li>
-        <li>
-          <a href="https://github.com/seancaat" target="_blank">GitHub</a>
-        </li>
-        <a class="button" href="mailto:seancaat@gmail.com">Email</a>
-      </ul>
-    </footer>
-    
   </body>
 </html>
